--- a/src/index.html
+++ b/src/index.html
@@ -3,46 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heap Groomer Toolkit</title>
+    <title>Heap Grooming Toolkit</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            margin: 0;
+            max-width: 1200px;
+            margin: 0 auto;
             padding: 20px;
             background-color: #f5f5f5;
         }
 
         .container {
-            max-width: 1200px;
-            margin: 0 auto;
             display: grid;
-            grid-template-columns: 300px 1fr;
+            grid-template-columns: 1fr 1fr;
             gap: 20px;
         }
 
-        .sidebar {
+        .forms {
             background-color: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
-        .main-content {
+        .visualization {
             background-color: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
-        .section {
+        form {
             margin-bottom: 20px;
-        }
-
-        .section-title {
-            font-size: 1.2em;
-            font-weight: 600;
-            margin-bottom: 10px;
-            color: #333;
         }
 
         .form-group {
@@ -52,10 +45,10 @@
         label {
             display: block;
             margin-bottom: 5px;
-            color: #666;
+            font-weight: 500;
         }
 
-        input, select, textarea {
+        input, select {
             width: 100%;
             padding: 8px;
             border: 1px solid #ddd;
@@ -71,27 +64,13 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 14px;
-            transition: background-color 0.2s;
         }
 
         button:hover {
             background-color: #0056b3;
         }
 
-        button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-
-        #visualization {
-            width: 100%;
-            height: 600px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-top: 20px;
-        }
-
-        .code-output {
+        #generated-code {
             background-color: #f8f9fa;
             padding: 15px;
             border-radius: 4px;
@@ -100,199 +79,109 @@
             margin-top: 20px;
         }
 
-        .status {
-            padding: 10px;
-            border-radius: 4px;
-            margin-top: 10px;
+        .diff-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
         }
 
-        .status.success {
-            background-color: #d4edda;
-            color: #155724;
+        .diff-table th,
+        .diff-table td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
         }
 
-        .status.error {
-            background-color: #f8d7da;
-            color: #721c24;
+        .diff-table th {
+            background-color: #f8f9fa;
+            font-weight: 500;
+        }
+
+        h1, h2 {
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 2em;
+        }
+
+        h2 {
+            font-size: 1.5em;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 5px;
         }
     </style>
 </head>
 <body>
+    <h1>Heap Grooming Toolkit</h1>
+    
     <div class="container">
-        <div class="sidebar">
-            <div class="section">
-                <div class="section-title">Configuration</div>
+        <div class="forms">
+            <h2>Heap Spray</h2>
+            <form id="spray-form">
                 <div class="form-group">
-                    <label for="browser">Browser</label>
-                    <select id="browser">
-                        <option value="chrome">Chrome</option>
-                        <option value="firefox">Firefox</option>
-                        <option value="edge">Edge</option>
-                    </select>
+                    <label for="targetSize">Target Size:</label>
+                    <input type="number" id="targetSize" name="targetSize" required>
                 </div>
                 <div class="form-group">
-                    <label for="version">Version</label>
-                    <input type="text" id="version" placeholder="e.g., 91.0.4472.124">
+                    <label for="count">Count:</label>
+                    <input type="number" id="count" name="count" required>
                 </div>
                 <div class="form-group">
-                    <label>
-                        <input type="checkbox" id="sandboxed">
-                        Sandboxed
-                    </label>
-                </div>
-                <button id="initialize">Initialize</button>
-            </div>
-
-            <div class="section">
-                <div class="section-title">Bug Analysis</div>
-                <div class="form-group">
-                    <label for="bugType">Bug Type</label>
-                    <select id="bugType">
-                        <option value="overflow">Overflow</option>
-                        <option value="underflow">Underflow</option>
-                        <option value="uaf">Use-After-Free</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="bugSize">Bug Size (bytes)</label>
-                    <input type="number" id="bugSize" min="1" value="8">
-                </div>
-                <div class="form-group">
-                    <label for="targetSize">Target Size (bytes)</label>
-                    <input type="number" id="targetSize" min="1" value="0x100">
-                </div>
-                <button id="analyzeBug">Analyze Bug</button>
-            </div>
-
-            <div class="section">
-                <div class="section-title">Allocation Pattern</div>
-                <div class="form-group">
-                    <label for="patternType">Pattern Type</label>
-                    <select id="patternType">
+                    <label for="objectType">Object Type:</label>
+                    <select id="objectType" name="objectType" required>
                         <option value="array">Array</option>
                         <option value="object">Object</option>
                         <option value="string">String</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="patternSize">Size (bytes)</label>
-                    <input type="number" id="patternSize" min="1" value="0x100">
+                    <label for="fillPattern">Fill Pattern (optional):</label>
+                    <input type="text" id="fillPattern" name="fillPattern">
                 </div>
                 <div class="form-group">
-                    <label for="patternCount">Count</label>
-                    <input type="number" id="patternCount" min="1" value="10">
+                    <label for="alignment">Alignment:</label>
+                    <input type="number" id="alignment" name="alignment" value="8">
                 </div>
-                <button id="analyzePattern">Analyze Pattern</button>
-            </div>
+                <button type="submit">Generate Spray Code</button>
+            </form>
+
+            <h2>Heap Defragmentation</h2>
+            <form id="defrag-form">
+                <div class="form-group">
+                    <label for="defragTargetSize">Target Size:</label>
+                    <input type="number" id="defragTargetSize" name="targetSize" required>
+                </div>
+                <div class="form-group">
+                    <label for="defragCount">Count:</label>
+                    <input type="number" id="defragCount" name="count" value="100">
+                </div>
+                <button type="submit">Generate Defrag Code</button>
+            </form>
+
+            <h2>Freelist Priming</h2>
+            <form id="freelist-form">
+                <div class="form-group">
+                    <label for="slotSize">Slot Size:</label>
+                    <input type="number" id="slotSize" name="slotSize" required>
+                </div>
+                <div class="form-group">
+                    <label for="freelistCount">Count:</label>
+                    <input type="number" id="freelistCount" name="count" required>
+                </div>
+                <button type="submit">Generate Priming Code</button>
+            </form>
         </div>
 
-        <div class="main-content">
-            <div class="section">
-                <div class="section-title">Heap Visualization</div>
-                <div id="visualization"></div>
-            </div>
-
-            <div class="section">
-                <div class="section-title">Generated Code</div>
-                <div class="code-output" id="generatedCode"></div>
-            </div>
-
-            <div class="section">
-                <div class="section-title">Analysis Results</div>
-                <div id="analysisResults"></div>
-            </div>
-
-            <div id="status" class="status"></div>
+        <div class="visualization">
+            <h2>Heap State Visualization</h2>
+            <div id="visualization"></div>
+            <div id="generated-code"></div>
         </div>
     </div>
 
-    <script type="module">
-        import { HeapGroomer } from './index.js';
-
-        const groomer = new HeapGroomer('visualization');
-        let initialized = false;
-
-        // Initialize button handler
-        document.getElementById('initialize').addEventListener('click', async () => {
-            const config = {
-                browser: document.getElementById('browser').value,
-                version: document.getElementById('version').value,
-                sandboxed: document.getElementById('sandboxed').checked
-            };
-
-            try {
-                await groomer.initialize(config);
-                initialized = true;
-                showStatus('Initialized successfully', 'success');
-            } catch (error) {
-                showStatus(`Initialization failed: ${error.message}`, 'error');
-            }
-        });
-
-        // Analyze bug button handler
-        document.getElementById('analyzeBug').addEventListener('click', async () => {
-            if (!initialized) {
-                showStatus('Please initialize first', 'error');
-                return;
-            }
-
-            const bug = {
-                type: document.getElementById('bugType').value,
-                size: parseInt(document.getElementById('bugSize').value),
-                targetSize: parseInt(document.getElementById('targetSize').value)
-            };
-
-            try {
-                const results = await groomer.analyzeExploitChain(bug);
-                displayResults(results);
-                showStatus('Bug analysis completed', 'success');
-            } catch (error) {
-                showStatus(`Bug analysis failed: ${error.message}`, 'error');
-            }
-        });
-
-        // Analyze pattern button handler
-        document.getElementById('analyzePattern').addEventListener('click', async () => {
-            if (!initialized) {
-                showStatus('Please initialize first', 'error');
-                return;
-            }
-
-            const pattern = {
-                allocations: [{
-                    type: document.getElementById('patternType').value,
-                    size: parseInt(document.getElementById('patternSize').value),
-                    count: parseInt(document.getElementById('patternCount').value)
-                }]
-            };
-
-            try {
-                const results = await groomer.analyzeAllocationPattern(pattern);
-                displayResults(results);
-                showStatus('Pattern analysis completed', 'success');
-            } catch (error) {
-                showStatus(`Pattern analysis failed: ${error.message}`, 'error');
-            }
-        });
-
-        function displayResults(results) {
-            // Display analysis results
-            const resultsDiv = document.getElementById('analysisResults');
-            resultsDiv.innerHTML = JSON.stringify(results, null, 2);
-
-            // Display generated code if available
-            if (results.strategies) {
-                const bestStrategy = results.strategies[0];
-                const code = groomer.generateGroomingCode(bestStrategy);
-                document.getElementById('generatedCode').textContent = code;
-            }
-        }
-
-        function showStatus(message, type) {
-            const statusDiv = document.getElementById('status');
-            statusDiv.textContent = message;
-            statusDiv.className = `status ${type}`;
-        }
-    </script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html> 
